La till en delete-funktion av users.
