# server/routes/UserRoutes.js
@@ -1,5 +1,5 @@
 import { Router } from 'express';
-import { signup, login } from '../controllers/usersController.js';
+import { signup, login, deleteUser } from '../controllers/usersController.js';
 import validate from '../middleware/validate.js';
 import { signupSchema, loginSchema } from '../validators/userValidator.js';
 
@@ -7,5 +7,6 @@ const router = Router();
 
 router.post('/signup', validate(signupSchema), signup);
 router.post('/login', validate(loginSchema), login);
+router.delete('/:id', deleteUser);
 
 export default router;
